# eek

./: .gitignore  Makefile.am  byteorder.h  configure.ac  configure.in  cpu.c  cpu.h  eek.h  electron.c  electron.h  events.c  main.c  monitor.c  monitor.h  stypes.h  timer.c  timer.h  util.c  video.c  video.h
gconf/: Makefile.am  eek.schemas  make-schema.el
glade/: Makefile.am  preferences-dialog.glade
src/: Makefile.am  aboutdialog.c  aboutdialog.h  breakpointeditdialog.c  breakpointeditdialog.h  cpu.c  cpu.h  debugger.c  debugger.h  disassemble.c  disassemble.h  disdialog.c  disdialog.h  dismodel.c  dismodel.h  eek.h  eekmarshalers.list  electron.c  electron.h  electronmanager.c  electronmanager.h  electronwidget.c  electronwidget.h  events.h  file2uef.c  framesource.c  framesource.h  gladeutil.c  gladeutil.h  hexspinbutton.c  hexspinbutton.h  intl.h  main.c  mainwindow.c  mainwindow.h  memdispcombo.c  memdispcombo.h  memorydisplay.c  memorydisplay.h  monitor.c  (+21 more)
