dnl Process this file with autoconf to produce a configure script.

AC_INIT(configure.in)
AM_INIT_AUTOMAKE(eek, 0.1)
AM_CONFIG_HEADER(config.h)

AC_ISC_POSIX
AC_PROG_CC
AM_PROG_CC_STDC
AC_HEADER_STDC

dnl FIXME: this is a stub
if false; then
 AC_DEFINE(BYTE_ORDER_BIG, 1, [Use big byte first])
else
 AC_DEFINE(BYTE_ORDER_SMALL, 1, [Use small byte first])
fi

dnl Check for GTK
AM_PATH_GTK_2_0(2.6.0, , AC_MSG_ERROR([GTK+ version >= 2.6.0 is required]))

dnl Use -Wall if we have gcc.
changequote(,)dnl
if test "x$GCC" = "xyes"; then
  case " $CFLAGS " in
  *[\ \	]-Wall[\ \	]*) ;;
  *) CFLAGS="$CFLAGS -Wall" ;;
  esac
fi
changequote([,])dnl

dnl Check for zlib
have_zlib=yes;
AC_CHECK_HEADER(zlib.h, , have_zlib=no)
AC_CHECK_LIB(z, inflateEnd, , have_zlib=no)
if test "x$have_zlib" = "xno"; then
   AC_MSG_WARN(Compiling without zlib support)
   AC_MSG_WARN(You will not be able to load compressed UEF files)
else
   AC_DEFINE(HAVE_ZLIB, 1, [Defined if zlib is available])
fi;

AC_OUTPUT([
Makefile
src/Makefile
])
