dnl Process this file with autoconf to produce a configure script.

AC_INIT(configure.in)
AM_INIT_AUTOMAKE(eek, 0.1)
AM_CONFIG_HEADER(config.h)

AC_ISC_POSIX
AC_PROG_CC
AM_PROG_CC_STDC
AC_HEADER_STDC

dnl Check for pkg-config dependencies
PKG_CHECK_MODULES(EEK_DEP, libglade-2.0 gtk+-2.0 >= 2.6.0 gconf-2.0)
AC_SUBST(EEK_DEP_CFLAGS)
AC_SUBST(EEK_DEP_LIBS)

dnl Check for zlib
have_zlib=yes;
AC_CHECK_HEADER(zlib.h, , have_zlib=no)
AC_CHECK_LIB(z, inflateEnd, , have_zlib=no)
if test "x$have_zlib" = "xno"; then
   AC_MSG_WARN(Compiling without zlib support)
   AC_MSG_WARN(You will not be able to load compressed UEF files)
else
   AC_DEFINE(HAVE_ZLIB, 1, [Defined if zlib is available])
fi;

dnl Set PACKAGE_SOURCE_DIR in config.h.
packagesrcdir=`cd $srcdir && pwd`
AC_DEFINE_UNQUOTED(PACKAGE_SOURCE_DIR, "${packagesrcdir}",
				       [Define to the source directory])

dnl Use -Wall if we have gcc.
changequote(,)dnl
if test "x$GCC" = "xyes"; then
  case " $CFLAGS " in
  *[\ \	]-Wall[\ \	]*) ;;
  *) CFLAGS="$CFLAGS -Wall" ;;
  esac
fi
changequote([,])dnl

AC_OUTPUT([
Makefile
src/Makefile
glade/Makefile
])
